<resources>
    <string name="app_name">FoodHUB</string>
    <string name="hi">Hi, </string>
    <string name="username">Ali</string>
    <string name="do_your_part">Do your part in making the world great again!</string>
    <string name="categories">Categories</string>

    <string name="home">Home</string>
    <string name="volunteer">Volunteer</string>
    <string name="near_me">Near Me</string>
    <string name="donate">Donate</string>
    <string name="helplines">Helplines</string>
    <string name="my_profile">My Profile</string>

    <string name="latest_news">Latest News</string>
    <string name="about_us">About Us</string>
    <string name="edigests">E-Digests</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="show_more">Show More</string>

    <string name="placeholder_title">Title</string>
    <string name="placeholder_image">Image</string>
    <string name="placeholder_location">Location</string>
    <string name="placeholder_facility">Facility</string>
    <string name="placeholder_date">Date Posted</string>

    <string-array name="states">
        <item>Kuala Lumpur</item>
        <item>Johor Bahru</item>
        <item>Pulau Pinang</item>
        <item>Selangor</item>

    </string-array>
    <string-array name="phone_Country">
        <item>+60</item>
        <item>+62</item>
        <item>+65</item>
        <item>+850</item>
    </string-array>

    <string name="loginIDTVS">Name</string>
    <string name="passwordTVS">Password</string>
    <string name="LoginButton">Login</string>
    <string name="RegisterButton">Register</string>
    <string name="phoneTV">Phone Number</string>
    <string name="preLogTitleTV">Are You Ready To Join Us?</string>

    <string name="bulletin">Bulletin</string>
    <string name="e_digest">E-Digest</string>
    <string name="delete_all">Delete All</string>
    <string name="delete">Delete</string>
    <string name="screen_title">Screen Title</string>

    <string-array name="facility_types">
        <item>Food Bank</item>
        <item>Farmers\' Market</item>
    </string-array>

    <string name="author">Author</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="publish">Publish</string>
    <string name="contact_number">Contact number</string>
    <string name="description">Description</string>
    <string name="website_url">Website URL</string>
    <string name="name">Name</string>
    <string name="street_address">Street address</string>
    <string name="city">City</string>
    <string name="postcode">Postcode</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="waze_url">Waze URL</string>
    <string name="google_maps_url">Google Maps URL</string>
    <string name="registration_url">Registration URL</string>
    <string name="total_users">TOTAL USERS</string>
    <string name="total_donations">TOTAL DONATIONS</string>
    <string name="total_nvoluntary_nworks">TOTAL\nVOLUNTARY\nWORKS</string>
    <string name="total_nfacilities_n">TOTAL\nFACILITIES\n</string>
    <string name="total_nhelplines_n">TOTAL\nHELPLINES\n</string>
    <string name="total_nnews_narticles">TOTAL\nNEWS\nARTICLES</string>
    <string name="total_ne_digest_narticles">TOTAL\nE-DIGEST\nARTICLES</string>
    <string name="update">Update</string>

    <string name="new_work">New Work</string>
    <string name="new_facility">New Facility</string>
    <string name="new_helpline">New Helpline</string>
    <string name="new_article">New Article</string>
    <string name="new_digest">New Digest</string>

    <string name="edit_work">Edit Work</string>
    <string name="edit_facility">Edit Facility</string>
    <string name="edit_helpline">Edit Helpline</string>
    <string name="edit_article">Edit Article</string>
    <string name="edit_digest">Edit Digest</string>

    <string name="donation_terms_text">Thank you for choosing to donate to Food Hub. By donating, you agree to these Donation Terms and Conditions.\n\n 1. No Refunds: Donations made to Food Hub are non-refundable.\n\n 2. Confirmation of Payment: When you make a donation, you will receive a confirmation email from us. Please keep this email for your records.\n\n 3. Use of Donations: All donations made to Food Hub will be used to support food banks and people in need. We reserve the right to allocate your donation in the most effective and efficient way possible to maximize the impact of our programs.\n\n 4. Tax-Deductible: Food Hub is a registered nonprofit organization. Your donation may be tax-deductible in accordance with local laws. Please consult your tax advisor for more information.\n\n 5. Acknowledgment: Food Hub will provide an acknowledgment letter for your donation for tax purposes.\n\n 6. Privacy: Your personal information will be used to process your donation and to communicate with you about Food Hub\'s activities. We will not share your personal information with third parties.\n\n 7. Changes: Food Hub reserves the right to modify these Donation Terms and Conditions at any time. Any changes will be effective immediately upon posting on our website.\n\n By donating to Food Hub, you agree to these Donation Terms and Conditions.\n\n Thank you for supporting Food Hub in our mission to help those in need.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>