<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:icon="@drawable/home"
        android:title="@string/home"
        app:showAsAction="always"
        app:actionViewClass="android.widget.Button" />

    <item
        android:id="@+id/near_me"
        android:icon="@drawable/near_me"
        android:title="@string/near_me"
        app:showAsAction="always"
        app:actionViewClass="android.widget.Button" />

    <item
        android:id="@+id/donate"
        android:icon="@drawable/donate"
        android:title="@string/donate"
        app:showAsAction="always"
        app:actionViewClass="android.widget.Button" />

    <item
        android:id="@+id/helplines"
        android:icon="@drawable/helplines"
        android:title="@string/helplines"
        app:showAsAction="always"
        app:actionViewClass="android.widget.Button" />

    <item
        android:id="@+id/my_profile"
        android:icon="@drawable/my_profile"
        android:title="@string/my_profile"
        app:showAsAction="always"
        app:actionViewClass="android.widget.Button" />

</menu>