<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/volunteer_card_container"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="8dp"
    app:cardCornerRadius="@dimen/category_ic_radius">

    <LinearLayout
        android:id="@+id/volunteer_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/volunteer_card_image"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:contentDescription="@string/placeholder_image"
            android:src="@mipmap/image_placeholder"
            android:background="@color/gray"
            android:paddingBottom="0.5dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/volunteer_card_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:contentDescription="@string/placeholder_title"
            android:text="@string/placeholder_title"
            android:textSize="@dimen/card_title"
            android:padding="@dimen/card_text_pad"
            style="@style/BlackTextStyle" />

        <TextView
            android:id="@+id/volunteer_card_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:contentDescription="@string/placeholder_location"
            android:drawableLeft="@drawable/ic_card_location"
            android:drawablePadding="@dimen/card_drawable_pad"
            android:text="@string/placeholder_location"
            android:textSize="@dimen/card_desc"
            android:gravity="center_vertical"
            android:padding="@dimen/card_text_pad"
            style="@style/GrayTextStyle" />

    </LinearLayout>

</androidx.cardview.widget.CardView>