<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.login.RegisterFragment">

    <Button
        android:id="@+id/regScrBackBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="#00FFFFFF"
        android:text="Back"
        android:textColor="#000000"
        android:textSize="16sp"
        app:icon="@drawable/arrow_back_ios_fill0_wght400_grad0_opsz48"
        app:iconPadding="0dp"
        app:iconTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/regIDTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/poppins"
        android:text="@string/loginIDTVS"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/regPWTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/poppins"
        android:text="@string/passwordTVS"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/regIDTV"
        app:layout_constraintTop_toBottomOf="@+id/regIDTV" />

    <EditText
        android:id="@+id/regIDTE"
        android:layout_width="341dp"
        android:layout_height="47dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/regIDTV"
        app:layout_constraintTop_toBottomOf="@+id/regIDTV" />

    <EditText
        android:id="@+id/regPWTE"
        android:layout_width="343dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/regPWTV"
        app:layout_constraintTop_toBottomOf="@+id/regPWTV" />

    <Button
        android:id="@+id/regConfirmButton"
        android:layout_width="342dp"
        android:layout_height="52dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins"
        android:text="@string/RegisterButton"
        android:textSize="20sp"
        app:backgroundTint="@color/salmon"
        app:layout_constraintStart_toStartOf="@+id/phoneSpinner"
        app:layout_constraintTop_toBottomOf="@+id/phoneSpinner" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:fontFamily="@font/poppins"
        android:text="@string/phoneTV"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/regPWTV"
        app:layout_constraintTop_toBottomOf="@+id/regPWTV" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/phoneSpinner"
        app:layout_constraintTop_toTopOf="@+id/phoneSpinner" />

    <Spinner
        android:id="@+id/phoneSpinner"
        android:layout_width="115dp"
        android:layout_height="62dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>