<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".admin.fragments.update.AdminUpdateHelplineFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/margin">

            <LinearLayout
                android:id="@+id/h_title_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="@dimen/margin"
                android:layout_marginTop="@dimen/margin_double"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:src="@drawable/ic_admin_edit_title"
                    android:paddingEnd="@dimen/margin"
                    app:tint="@color/darkGray" />

                <EditText
                    android:id="@+id/update_h_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:inputType="text"
                    android:maxLines="1"
                    android:scrollHorizontally="false"
                    android:scrollbars="vertical"
                    style="@style/AddUpdateFieldStyle" />

            </LinearLayout>

            <View
                android:id="@+id/h_line_1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightGray"
                android:layout_margin="@dimen/margin"
                app:layout_constraintTop_toBottomOf="@id/h_title_field"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <LinearLayout
                android:id="@+id/h_phone_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                app:layout_constraintTop_toBottomOf="@id/h_line_1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:src="@drawable/ic_admin_edit_phone"
                    android:paddingEnd="@dimen/margin"
                    app:tint="@color/darkGray" />

                <EditText
                    android:id="@+id/update_h_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contact_number"
                    android:inputType="phone"
                    style="@style/AddUpdateFieldStyle" />

            </LinearLayout>

            <View
                android:id="@+id/h_line_2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightGray"
                android:layout_margin="@dimen/margin"
                app:layout_constraintTop_toBottomOf="@id/h_phone_field"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <LinearLayout
                android:id="@+id/h_website_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                app:layout_constraintTop_toBottomOf="@id/h_line_2">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:src="@drawable/ic_admin_edit_link"
                    android:paddingEnd="@dimen/margin"
                    app:tint="@color/darkGray" />

                <EditText
                    android:id="@+id/update_h_website"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/website_url"
                    android:inputType="textMultiLine"
                    android:minLines="1"
                    android:maxLines="3"
                    android:scrollHorizontally="false"
                    android:scrollbars="vertical"
                    style="@style/AddUpdateFieldStyle" />

            </LinearLayout>

            <View
                android:id="@+id/h_line_3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightGray"
                android:layout_margin="@dimen/margin"
                app:layout_constraintTop_toBottomOf="@id/h_website_field"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <LinearLayout
                android:id="@+id/h_desc_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                app:layout_constraintTop_toBottomOf="@id/h_line_3">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:src="@drawable/ic_admin_edit_desc"
                    android:paddingEnd="@dimen/margin"
                    app:tint="@color/darkGray" />

                <EditText
                    android:id="@+id/update_h_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:inputType="textMultiLine"
                    android:minLines="1"
                    android:maxLines="10"
                    android:scrollHorizontally="false"
                    android:scrollbars="vertical"
                    style="@style/AddUpdateFieldStyle" />

            </LinearLayout>

            <Button
                android:id="@+id/h_update_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin"
                android:layout_marginVertical="@dimen/margin_double"
                android:text="@string/update"
                style="@style/ButtonStyle"
                app:layout_constraintTop_toBottomOf="@id/h_desc_field"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>